src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:wght@400;500;600&family=Roboto:wght@400;500;700;900&display=swap');

body{
    background-color: #292C35;
    overflow-x: hidden;
}

/* width */
::-webkit-scrollbar {
    width: 6px;
  }
  
  /* Track */
  ::-webkit-scrollbar-track {
    background: rgba(255, 255, 255, 0); 
  }
   
  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: rgba(63, 99, 207, 0.151); 
    border-radius: 20px;
  }
  
  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: #555; 
  }

.roboto{
    font-family: 'Roboto', sans-serif;
}
.paintedblue{
    color: #718BFF;
}

.circle-big{
    width: 450px;
    height: 450px;
    border-radius: 50%;
    background: rgba(63, 99, 207, 0.04);
    transform: translateY(125px) translateX(-50px) ;
    z-index: -10;
}
.circle-small{
    background: rgba(63, 99, 207, 0.04);
    width: 300px;
    height: 300px;
    border-radius: 50%;
    transform: translateX(200px) translateY(110px);
    z-index: -20;
}

.fullname{
    font-family: 'Abril Fatface', cursive;
}


.hello-container p{
  padding-top: 10px;
  padding-right: 2rem;
  font-weight: 400;
  opacity: 0;
}

.showtext{
  opacity: 0;
  animation-name: showtext;
  animation-duration: 2s;
  animation-timing-function: ease;
  animation-fill-mode: forwards;
  
}
.showtext2{
  opacity: 0;
  animation-name: showtext;
  animation-duration: 2s;
  animation-timing-function: ease;
  animation-fill-mode: forwards;
  animation-delay: 1s;
  
}

@keyframes showtext {
  from{
    transform: translateY(1rem);
  }
  to{
    opacity: 1;
    transform: translateY(0);
  }
}

/*Font poppins*/
.poppins{
  font-family: 'Poppins', sans-serif;
}


.logo-line path{
  stroke-dasharray:3500;
  stroke-dashoffset:3500;
  animation: draw 3s ease-in forwards;

}
.logo-line2 path{
  stroke-dasharray:5500;
  stroke-dashoffset:-5500;
  animation: draw 3s ease-in forwards;

}
@keyframes draw{
  to{
      stroke-dashoffset: 0;
  }
}
.Hello{
  background: linear-gradient(89.82deg, #2FF3FF -20.09%, #4E6AE2 70.14%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  font-weight: bold;
}

/*xs*/
@media (max-width: 519px) { 
  .hello-container{
    left: 0;
    min-width: 100vw;
    transform: translateY(-40vh);
    border-radius: 2rem;
    padding-left: 0;
  }
  .hello-image{
    float: none;
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .hello-container h1{
    padding-bottom: 2rem;
  }
  .hello-container p{
    padding-right: 1.5rem;
    padding-left: 1rem;
  }
  .SectionTwo-title{
    justify-content: center;
    padding-top: 1rem;
  }
  .sectionOne{
    display: inline-block;
    text-align: center;
  }
  .fullname{
    transform: translateY(-15vh);
    width: 100vw;
    min-height: 40vh;
  }
  .fullname p{
    padding-left: 0;
    font-size: 9rem;
    text-align: center;
  }
  .paragraph1{
    text-indent: 0;
    font-size: 13px;
  }
  .logo-line{
    display: none;
  }
  .me-design{
    display: none;
  }

 }

